<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_header">

        <ListPreference
            app:defaultValue="System default"
            app:entries="@array/themes"
            app:entryValues="@array/themes"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />


        <EditTextPreference
            app:defaultValue="Default value"
            app:key="edit_text_preference"
            app:title="@string/edit_txt_pref"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/General_header">
        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />
        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />


        <ListPreference
            app:defaultValue="en"
            app:entries="@array/languages"
            app:entryValues="@array/locales"
            app:key="languages_list"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

        <!--        <MultiSelectListPreference-->
        <!--            app:key="multi_select_list_preference"-->
        <!--            app:title="@string/MultiSelect_List"-->
        <!--            app:entries="@array/values"-->
        <!--            android:persistent="true"-->
        <!--            app:entryValues="@array/select_values"-->
        <!--            />-->

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="checkbox_preference"
            app:summaryOff="@string/summary_off"
            app:summaryOn="@string/summary_on"
            app:title="@string/check_box_preference" />

        <SeekBarPreference
            android:max="30"
            app:defaultValue="22"
            app:key="seek_bar_preference"
            app:min="1"
            app:showSeekBarValue="true"
            app:summary="@string/summary"
            app:title="@string/font_title" />

        <SeekBarPreference
            app:key="seek_bar"
            app:summary="@string/summary"
            app:title="@string/seek_bar_preference" />
    </PreferenceCategory>

</PreferenceScreen>

